Fix header misalignment after git pull

--- a/src/sentry/static/sentry/app/views/onboarding/onboarding.less
+++ b/src/sentry/static/sentry/app/views/onboarding/onboarding.less
@@ -24,19 +24,12 @@
     border-right: 6px solid @white-darker;
     border-bottom: 6px solid @white-darker;
     border-left: 6px solid @gray;
-    -webkit-animation: loading2 .5s infinite linear;
-    animation: loading2 .55s infinite linear;
+    -webkit-animation: loading .5s infinite linear;
+    animation: loading .55s infinite linear;
     border-radius: 50%;
     width: 32px;
     height: 32px;
   }
-}
-
-.waiting-header {
-  position: relative;
-  padding-left: 50px;
-  padding-right: 65px;
-  pull-right;
 }
 
 .awaiting-event {
@@ -50,7 +43,7 @@
 
 .waiting-text {
   padding-right: 10px;
-  padding-left: 20px;
+  padding-left: 50px;
   position: relative;
 }
 
